--- a/index.html
+++ b/index.html
@@ -192,7 +192,7 @@
                         </div>
                     </div>
 
-                    <div class="sobre__chamada animate" data-anima="bottom">
+                    <div class="sobre__chamada" data-anima="bottom">
                         <img src="assets/img/avatares/logotipo.svg" alt="" class="sobre__chamada--imagem">
                         <p class="sobre__chamada--texto">In the last few months, I've been studying a lot and i've developed some really cool work. How about meeting some of them?</p>
                         <div class="caixa-botao">
@@ -206,24 +206,24 @@
 
             <section class="habilidades" id="habilidades">
                 <div class="habilidades__intro">
-                    <div class="habilidades__texto animate" data-anima="left">
-                        <h2 class="titulo-secao digitando-nocenter digitando animate" data-anima="typing">Skills</h2>
+                    <div class="habilidades__texto" data-anima="left">
+                        <h2 class="titulo-secao digitando-nocenter" data-anima="typing">Skills</h2>
                         <p class="habilidades__corpo">I can add value to your business in several ways, here are some of my main technical skills and activities that <strong> i like to perform</strong>:</p>
                     </div>
-                    <img src="assets/img/avatares/callme.png" alt="" class="habilidades__avatar animate" data-anima="right">
+                    <img src="assets/img/avatares/callme.png" alt="" class="habilidades__avatar" data-anima="right">
                 </div>
                 <div class="habilidades__cards">
-                    <div class="habilidades__card vidro animate" data-anima="bottom">
+                    <div class="habilidades__card vidro" data-anima="bottom">
                         <h3 class="habilidades__card--titulo">Data analysis and visualization</h3>
                         <p class="habilidades__card--descricao">By leveraging NumPy, Pandas, and Matplotlib tools, I can help the organization extract insights from data, make data-driven decisions, and present information in a clear and meaningful way.</p>
                         <button class="botao botao-secundario habilidades__card--botao" data-botao="contato">Get in Touch</button>
                     </div>
-                    <div class="habilidades__card habilidades__card--principal vidro animate" data-anima="bottom">
+                    <div class="habilidades__card habilidades__card--principal vidro" data-anima="bottom">
                         <h3 class="habilidades__card--titulo">Automation and scripting</h3>
                         <p class="habilidades__card--descricao">By creating scripts and tools, I can streamline repetitive processes, reduce manual effort, and improve overall productivity.</p>
                         <button class="botao botao-secundario habilidades__card--botao" data-botao="contato">Get in Touch</button>
                     </div>
-                    <div class="habilidades__card vidro animate" data-anima="bottom">
+                    <div class="habilidades__card vidro" data-anima="bottom">
                         <h3 class="habilidades__card--titulo">Collaboration and teamwork</h3>
                         <p class="habilidades__card--descricao">By actively participating in team projects, sharing my knowledge, and collaborating with other developers, I can contribute to the success of the organization and help improve the overall quality of code and solutions.</p>
                         <button class="botao botao-secundario habilidades__card--botao" data-botao="contato">Get in Touch</button>
@@ -233,59 +233,10 @@
 
             <section class="projetos" id="projetos">
                 <div>
-                    <h2 class="titulo-secao digitando animate" data-anima="typing">Projects</h2>
-                    <p class="projetos__texto animate" data-anima="bottom">Below, I present some of the latest projects, individual, that I participated as a <strong class="texto-gradient">Designer and Full Stack Developer.</strong>. You can find these and other works in <a href="https://github.com/ruderumit1403?tab=repositories" target="_blank" rel="noreferrer" class="github-link">my GitHub repositories!</a>!</p>
+                    <h2 class="titulo-secao" data-anima="typing">Projects</h2>
+                    <p class="projetos__texto" data-anima="bottom">Below, I present some of the latest projects, individual, that I participated as a <strong class="texto-gradient">Designer and Full Stack Developer.</strong>. You can find these and other works in <a href="https://github.com/ruderumit1403?tab=repositories" target="_blank" rel="noreferrer" class="github-link">my GitHub repositories!</a>!</p>
                 </div>
-                <div class="projetos__projeto vidro animate" data-anima="bottom">
-    <div class="projetos__descricao">
-        <h3 class="subtitulo-secao" data-projeto="titulo">NetSecPro</h3>
-        <a href="http://smartclassroomiot.netlify.app/" target="_blank" class="texto-gradient projetos__link" data-projeto="link" rel="noreferrer">http://smartclassroomiot.netlify.app/</a>
-        <p class="projetos__projeto--detalhes" data-projeto="detalhes"></p>
-        <h4 class="subtitulo-secao subtitulo-techs">Technologies:</h4>
-        <ul class="projetos__techs" data-projeto="techs">
-            <li class="projetos__techs--item" title="HTML5"></li>
-            <li class="projetos__techs--item" title="CSS3"></li>
-            <li class="projetos__techs--item" title="JavaScript"></li>
-            <li class="projetos__techs--item projetos__techs--disabled" title="Sass"></li>
-            <li class="projetos__techs--item projetos__techs--disabled" title="TypeScript"></li>
-            <li class="projetos__techs--item projetos__techs--disabled" title="Next"></li>
-            <li class="projetos__techs--item projetos__techs--disabled" title="React"></li>
-            <li class="projetos__techs--item" title="Figma"></li>
-            <li class="projetos__techs--item projetos__techs--disabled" title="Trello"></li>
-            <li class="projetos__techs--item projetos__techs--disabled" title="GitHub"></li>
-        </ul>
-        <div class="caixa-botao">
-            <button class="botao botao-primario" data-botao="visitar" onclick="window.open('http://smartclassroomiot.netlify.app/', '_blank');">View Site</button>
-            <button class="botao botao-secundario" data-botao="repositorio" onclick="window.open('https://github.com/PrakasRavichandran/SmartClassroom', '_blank');"><span class="texto-gradient">Go to Repositories</span></button>
-        </div>
-    </div>
-
-    <div class="projetos__carrossel">
-
-        <button class="projetos__carrossel--botao projetos__carrossel--botao-left" aria-label="Botão ir para o anterior" title="Ir para o projeto anterior" data-botao-anterior=""><i class="ri-arrow-left-line"></i></button>
-
-        <div class="projetos__carrossel--imagem">
-            <ul class="projetos__carrossel--lista" data-carrossel="" style="transform: translateX(-3840px);">
-                <li class="projetos__carrossel--imagem-item" style="left: 0px;"><img alt="" src="assets/img/thumbs/11.png" class="projetos__carrossel--imagem-gif"></li>
-
-                <li class="projetos__carrossel--imagem-item" style="left: 480px;"><img alt="" src="assets/img/thumbs/22.png" class="projetos__carrossel--imagem-gif"></li>
-
-                <li class="projetos__carrossel--imagem-item" style="left: 960px;"><img alt="" src="assets/img/thumbs/33.png" class="projetos__carrossel--imagem-gif"></li>
-
-                <li class="projetos__carrossel--imagem-item" style="left: 1440px;"><img alt="" src="assets/img/thumbs/44.png" class="projetos__carrossel--imagem-gif"></li>
-            </ul>
-        </div>
-
-        <button class="projetos__carrossel--botao projetos__carrossel--botao-right" aria-label="Botão ir para o próximo" title="Ir para o próximo projeto" data-botao-proximo=""><i class="ri-arrow-right-line"></i></button>
-
-        <div class="projetos__carrossel--indicadores" data-navegacao="">
-            <button class="projetos__carrossel--indicador" aria-label="Botão indicador" data-indicador="0"></button>
-            <button class="projetos__carrossel--indicador" aria-label="Botão indicador" data-indicador="1"></button>
-            <button class="projetos__carrossel--indicador" aria-label="Botão indicador" data-indicador="2"></button>
-            <button class="projetos__carrossel--indicador" aria-label="Botão indicador" data-indicador="3"></button>
-        </div>
-    </div>
-</div>
+                
 
             </section>
 
@@ -464,4 +415,5 @@
 	}
 	// ]]>
 </script>
-</body><div style="all: initial; display: inline; border: 0; margin: 0; padding: 0; user-select: none; overflow: hidden; font-size: 0px;"></div></html>
+<div style="all: initial; display: inline; border: 0; margin: 0; padding: 0; user-select: none; overflow: hidden; font-size: 0px;"></div>
+</body></html>
